# digital-social-score

./: .gcloudignore  .gitignore  00_LISEZMOI_DABORD.md  CHECKLIST_RENDU.md  ETAT_AVANCEMENT_LIVRABLES.md  GUIDE_CLOUD_BUILD.md  GUIDE_PREPARATION_RENDU.md  INSTALL.md  LIVRABLE_SYNTHESE.md  Makefile  README.md  cloudbuild.yaml  install_spacy_models.bat  install_spacy_models.sh  pre-push-check.ps1  project_status_tracking.ipynb  pyproject.toml  verify_cloud_build_setup.ps1
docs/: livrable-metriques-projet.md  registre-rgpd.md
etape1-anonymisation/: README.md
etape1-anonymisation/data/: enrichissement.py
etape1-anonymisation/notebooks/: exploration.ipynb
etape1-anonymisation/scripts/: anonymize.py  prepare_for_mlops.py  simple_anonymize.py  test_anonymize.py
etape2-modele-ia/: README.md
etape2-modele-ia/models/simple_model/: metadata.json  model_comparison.csv
etape2-modele-ia/notebooks/: model_bert.ipynb  model_simple.ipynb  preprocessing.ipynb
etape3-api/: DEPLOIEMENT_PROMETHEUS_SUCCESS.md  Dockerfile  KUBERNETES-QUICK-START.md  PROMETHEUS_ACTIVATION.md  README.md  deploy.py  docker-compose.yml  postman_collection.json  quick_test.py  rapport_completion.py  rapport_final.py  rapport_succes_final.py  requirements.txt  start_server.py  test_api_quick.py  test_api_running.py  test_client.py  test_docker.ps1  test_docker.sh  test_docker_api.py  test_final.py  test_imports.py  validate_api.py
etape3-api/app/: __init__.py  config.py  inference.py  main.py  metrics.py  models.py  models_old.py  models_v2.py
etape3-api/k8s/: GCP-DEPLOYMENT-GUIDE.md  README.md  cleanup-gcp.ps1  configmap.yaml  deploy-gcp.ps1  deploy.ps1  deploy.sh  deployment-prometheus.yaml  deployment.yaml  gcp-setup.ps1  hpa.yaml  ingress.yaml  monitor-gcp.ps1  namespace.yaml  podmonitoring.yaml  service.yaml  test-deployment-gcp.ps1  test-k8s.ps1
etape3-api/tests/: test_api.py  test_inference.py
etape4-securite/: .env.example  README.md
etape4-securite/app/: auth.py  config.py  security.py
etape5-load-testing/: ANALYSE_FICHIERS.md  GRILLE_EVALUATION_COMPLETE.md  GUIDE_CREATION_DASHBOARD_MANUEL.md  MONITORING_SUCCESS.md  PLAN_ACTION_FINAL.md  README.md  lancer_test_dashboard.ps1  locustfile.py  setup_prometheus_monitoring.ps1  test_dashboard_5min.html
etape7-cloud-build/: CLOUD_BUILD_SUCCESS.md  COMMANDES_UTILES.md  README.md
etape7-mlops/: .gitignore  ARCHITECTURE_MLOPS.md  CHECK_READY.md  ETAPES_COMPLETEES.md  ETAT_PIPELINE.md  GUIDE_IMPLEMENTATION.md  QUICKSTART.md  QUICK_START.md  RAPPORT_TEST_MLOPS.md  README.md  VERIFICATION_ETAPE7.md  clean_and_compile.py  compile_full.py  compile_pipeline.py  compile_pipeline_simple.py  deploy_pipeline.ps1  launch_pipeline.py  launch_pipeline_clean.py  requirements.txt  run_mlops_pipeline.sh  setup-mlops.ps1  test_quick.py  test_setup.py  trigger_pipeline.py  upload_data_to_gcs.py
etape7-mlops/components/: evaluate_model.py  prepare_data.py  train_model.py
etape7-mlops/vertex_pipelines/: __init__.py  pipeline.py  pipeline_definition.py  trigger_pipeline.py
etape7-mlops/vertex_pipelines/components/: __init__.py  evaluate_model.py  prepare_data.py  train_model.py
